Add page footer about comments & contacting.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,6 +29,8 @@ layout: default
 
                 <hr>
 
+		<p style="font-style: italic; font-size: smaller">I'm currently debating whether to add a comment system or not.  Until I do, please <a href="/contact/">contact me directly</a> if you have something to say.  Do feel free to let me know what you think — about the article, or the site, or even just about whether I should add comments!</p>
+
                 <ul class="pager">
                     {% if page.previous.url %}
                     <li class="previous">
