--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <!-- Footer -->
 <footer>
-    <div class="container">
+    <div id="footer" class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <ul class="list-inline text-center">
@@ -57,3 +57,12 @@
 
 <!-- Custom Theme JavaScript -->
 <script src="{{ "/js/clean-blog.min.js " | prepend: site.baseurl }}"></script>
+
+<!-- Scrolling analytics -->
+<script src="{{ "/js/scroll.min.js" | prepend: site.baseurl }}"></script>
+<script>
+jQuery(function() { jQuery.scrollDepth({
+	minHeight: 2000,
+	elements: ['#footer']
+}); });
+</script>
