Consider scrolling an interaction.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -63,6 +63,7 @@
 <script>
 jQuery(function() { jQuery.scrollDepth({
 	minHeight: 2000,
-	elements: ['#footer']
+	elements: ['#footer'],
+	nonInteraction: false
 }); });
 </script>
