--- a/css/local.css
+++ b/css/local.css
@@ -23,3 +23,10 @@ span.note {
 	font-style: italic;
 	font-size: smaller;
 }
+
+span.science:before {
+	content: "\269B";
+}
+span.science {
+	color: #07d;
+}
