Add tagging support.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,7 +10,11 @@ layout: default
                 <div class="site-heading">
                     <h1>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h1>
                     <hr class="small">
+                  {% if page.tag_index %}
+                    <span class="subheading">Posts tagged "{{ page.tag }}"</span>
+                  {% else %}
                     <span class="subheading">{{ page.description }}</span>
+                  {% endif %}
                 </div>
             </div>
         </div>
