--- a/_includes/head.html
+++ b/_includes/head.html
@@ -40,6 +40,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','//www.google-analytics.com/analytics.js','ga'); 
 ga('create', 'UA-57941545-1', {'siteSpeedSampleRate': 100});
 ga('require', 'displayfeatures');
+ga('require', 'linkid', 'linkid.js');
 ga('send', 'pageview');
 </script>
 
