Add tag index page.

--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -21,3 +21,7 @@ header-img: "img/tags-bg.jpg"
 </div>
 <hr>
 {% endfor %}
+
+<div class="back-tags">
+  <a href="/tags/">Back to tag index</a>
+</div>
