--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,17 +9,12 @@
 
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
-    <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="{{ "/css/bootstrap.min.css" | prepend: site.baseurl }}">
-
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{ "/css/clean-blog.css" | prepend: site.baseurl }}">
-
-    <!-- Pygments Github CSS -->
-    <link rel="stylesheet" href="{{ "/css/syntax.css" | prepend: site.baseurl }}">
-
-    <!-- Local CSS -->
-    <link rel="stylesheet" href="{{ "/css/local.css" | prepend: site.baseurl }}">
+{% css_asset_tag global %}
+- /css/bootstrap.min.css
+- /css/clean-blog.css
+- /css/syntax.css
+- /css/local.css
+{% endcss_asset_tag %}
 
     <!-- Custom Fonts -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
