--- a/css/font-open-sans.css
+++ b/css/font-open-sans.css
@@ -8,7 +8,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
-  src: local('Open Sans'), local('OpenSans'), url(https://fonts.gstatic.com/s/opensans/v10/cJZKeOuBrn4kERxqtaUH3aCWcynf_cDxXwCLxiixG1c.ttf) format('truetype');
+  src: local('Open Sans'), local('OpenSans'), url(../fonts/open-sans.ttf) format('truetype');
 }
 @font-face {
   font-family: 'Open Sans';
