--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,11 +3,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    {% if page.tag_index %}
-    <meta name="description" content="Posts tagged &ldquo;{{ page.tag }}&rdquo;">
-    {% else %}
-    <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ page.subtitle }}{% endif %}">
-    {% endif %}
+    <meta name="description" content="{% if page.description %}{{ page.description }}{% elsif page.tag_index %}Posts tagged &ldquo;{{ page.tag }}&rdquo;{% else %}{{ page.subtitle }}{% endif %}{% if paginator.page > 1 %} (page {{ paginator.page }}){% endif %}">
 
     <title>{% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
 
