--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,13 +1,17 @@
 <head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="{% if page.description %}{{ page.description }}{% elsif page.tag_index %}Index of posts with the &ldquo;{{ page.tag }}&rdquo; tag.{% else %}{{ page.subtitle }}{% endif %}{% if paginator.page > 1 %} (page {{ paginator.page }}){% endif %}">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="{% if page.description %}{{ page.description }}{% elsif page.tag_index %}Index of posts with the &ldquo;{{ page.tag }}&rdquo; tag.{% else %}{{ page.subtitle }}{% endif %}{% if paginator.page > 1 %} (page {{ paginator.page }}){% endif %}" />
 
-    <title>{% if page.tag_index %}Tag: {{ page.tag }} — {% elsif page.title %}{{ page.title }} — {% endif %}{{ site.title }}</title>
+  {% if paginator.page > 1 %}
+    <meta name="robots" content="noindex" />
+  {% endif %}
 
-    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <title>{% if page.tag_index %}Tag: {{ page.tag }} — {% elsif page.title %}{{ page.title }} — {% endif %}{{ site.title }}{% if paginator.page > 1 %} (page {{ paginator.page }}){% endif %}</title>
+
+    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
 
 {% css_asset_tag global %}
 - /css/bootstrap.min.css
