Switch to non-minified JS, CSS.  Add dynamic minifying.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -50,10 +50,10 @@
 </footer>
 
 {% javascript_asset_tag global %}
-- /js/jquery.min.js
-- /js/bootstrap.min.js
-- /js/clean-blog.min.js
-- /js/scroll.min.js
+- /js/jquery.js
+- /js/bootstrap.js
+- /js/clean-blog.js
+- /js/scrolldepth.js
 {% endjavascript_asset_tag %}
 
 <script>
