--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,11 +14,11 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
 
 {% css_asset_tag global %}
-- /css/bootstrap.min.css
+- /css/bootstrap.css
 - /css/clean-blog.css
 - /css/syntax.css
 - /css/local.css
-- /css/font-awesome.min.css
+- /css/font-awesome.css
 - /css/font-lora.css
 - /css/font-open-sans.css
 {% endcss_asset_tag %}
