--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -1,7 +1,9 @@
 ---
 layout: page
-title: "Tags"
 tag_index: true
+noindex: true
+sitemap: false
+title: "Tags"
 header-img: "img/tags-bg.jpg"
 ---
 
