Replace old post footer text.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,7 +33,7 @@ layout: default
 
                 <hr>
 
-		<p style="font-style: italic; font-size: smaller">I'm currently debating whether to add a comment system or not.  Until I do, please <a href="/contact/">contact me directly</a> if you have something to say.  Do feel free to let me know what you think — about the article, or the site, or even just about whether I should add comments!</p>
+		<p style="font-style: italic; font-size: smaller">I've chosen not to host a comments section here, but please feel free to <a href="/contact/">contact me directly</a> if you have something to say.  I'm happy to hear what you think — whether it's about an article in particular, or just the site in general.</p>
 
                 <ul class="pager">
                     {% if page.previous.url %}
